<resources>
    <string name="app_name">Fishin\' Time</string>
    <string name="about_yaw_string">Yaw (z-axis rotation):</string>
    <string name="accel_mag_about">Accelerometer/Magnetometer Orientation</string>
    <string name="gyro_about">Gyroscope Orientation</string>
    <string name="fusion_orientation_about">Sensor Fusion Orientation</string>
    <string name="about_pitch_string">Pitch (x-axis rotation):</string>
    <string name="about_roll_string">Roll (y-axis rotation):</string>
    <string name="instruction_intro">Welcome to Fishin\' Time!</string>
    <string name="instruction_one">This game works by tilting the device. Touching the screen does nothing during gameplay.</string>
    <string name="instruction_two">Tilt the device to the orientation you wish to play in.</string>
    <string name="instruction_three">Use the arrows to move the shark inside the circle and press start.</string>
    <string name="instruction_four">Objective: Catch as many fish as possible before the ship reaches the other side.</string>
    <string name="instruction_gp_one">Tilt device to move the hook and catch fish.</string>
    <string name="instruction_gp_two">Return hooked fish to the boat to increase score.</string>
    <string name="instruction_gp_three">Avoid sharks. They will eat all the current fish on your hook.</string>
    <string name="instruction_gp_four">Be conscious of the ships position.</string>
    <string name="downArrow">↓</string>
    <string name="upArrow">↑</string>
    <string name="instructions">Instructions</string>
    <string name="practice_instructions_one">Hold the device level, so that the screen is facing directly upward.</string>
    <string name="practice_instructions_two">Practice moving the shark around the screen!</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="about_paragraph">Fishin\' Time is an android game application created by Dean Sponholz and Josh Schappel.
        This game works by fusing together the yaw, pitch, and roll from the Accelerometer, Magnetometer, and Gyroscope sensors to move a fish hook around the screen.
        To avoid both, gyro drift and noisy orientation, the gyroscope output is applied only for orientation changes in short time intervals, while the magnetometer/accelerometer data is used as support information over long periods of time.
        The resulting fusion is called a Kalman Filter.</string>
    <string name="start">Start</string>
    <string name="bottom_arrow">↓</string>
    <string name="up_arrow">↑</string>
    <string name="start_game">Start Game!</string>
    <string name="menu">Menu</string>
    <string name="zero">0</string>
    <string name="submitScore">Submit Score!</string>
    <string name="highscore_string">Highscores</string>
    <string name="name_input">Input Name</string>
    <string name="loading">Loading...</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="too_short">Name Length Too Short</string>
    <string name="big_success">Success</string>
</resources>
