<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <Button
            android:text="@string/instructions"
            android:background="@drawable/buttonshape_menu_image"
            android:layout_width="@dimen/button_size_layout_large"
            android:layout_height="@dimen/button_size_layout_large"
            android:id="@+id/instructions_button"
            android:textSize="@dimen/about_text_size"
            android:textColor="@android:color/white" />

        <Button
            android:text="@string/play"
            android:id="@+id/play_button"
            android:background="@drawable/buttonshape_menu_image"
            android:layout_width="@dimen/button_size_layout_large"
            android:layout_height="150dp"
            android:textSize="@dimen/about_text_size"
            android:layout_marginLeft="@dimen/menu_button_margin"
            android:layout_marginRight="@dimen/menu_button_margin"
            android:textColor="@android:color/white"/>

        <Button
            android:text="@string/about"
            android:background="@drawable/buttonshape_menu_image"
            android:layout_width="@dimen/button_size_layout_large"
            android:layout_height="@dimen/button_size_layout_large"
            android:id="@+id/about_button"
            android:textSize="@dimen/about_text_size"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/highscore_string"
            android:background="@drawable/buttonshape_menu"
            android:layout_width="@dimen/margin_button_fragment"
            android:layout_height="@dimen/score_margin"
            android:id="@+id/highscore_button"
            android:textSize="@dimen/menuButtonSize"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</RelativeLayout>