<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_calibrate">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin">

        <Button
            android:text="@string/up_arrow"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button"
            android:layout_width="@dimen/btton_size"
            android:layout_height="@dimen/button_size_widthd"
            android:background="@drawable/buttonshape"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:id="@+id/up_button" />

        <Button
            android:text="@string/start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button_middle"
            android:layout_width="@dimen/btton_size"
            android:layout_height="@dimen/button_size_widthd"
            android:background="@drawable/buttonshape"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/center_calibrate_button" />

        <Button
            android:text="@string/bottom_arrow"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_button"
            android:layout_width="@dimen/btton_size"
            android:layout_height="@dimen/button_size_widthd"
            android:background="@drawable/buttonshape"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:id="@+id/down_button" />
    </LinearLayout>
    <TextView
        android:text="@string/instruction_three"
        android:layout_width="@dimen/gamebutton_II_height_LARGE"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_top_gs"
        android:textSize="@dimen/instruction_title_text_size"
        android:id="@+id/first_instruction_screen_one"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/black"
        android:textAlignment="center" />
</RelativeLayout>