<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_calibrate_instruction"
    android:background="@color/instruction_two_Background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin">

        <Button
            android:text="@string/upArrow"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:id="@+id/up_button_instruction"
            android:layout_marginBottom="@dimen/gamebutton_ll_height_" />

        <Button
            android:text="@string/downArrow"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_width="100dp"
            android:layout_height="75dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:id="@+id/down_button_instruction" />
    </LinearLayout>

    <TextView
        android:text="@string/instruction_three"
        android:layout_width="@dimen/gamebutton_II_height_LARGE"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:textSize="29dp"
        android:id="@+id/first_instruction_screen_one"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"
        android:textAlignment="center" />
</RelativeLayout>